--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 energySource: '38% grid, 62% renewable',
 
                 chargingFee: '$0.00',
-                chargingFeeRate: 'per kWh',
+                chargingFeeRate: 'for any amount of power',
                 parkingFee: '$0.00',
                 parkingFeeRate: 'for any amount of time',
 
